--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ pre {
         <br>
         <figure>
             <video class="centered" width="80%" autoplay loop muted playsinline class="video-background " >
-                <source src="assets/vid.mp4#t=0.001" type="video/mp4">
+                <source src="assets/vid_twitter.mp4#t=0.001" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <p class="caption">
