Preparing twitter thread

--- a/index.html
+++ b/index.html
@@ -312,6 +312,8 @@ pre {
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:creator" content="@timudk">
         <meta name="twitter:title" content="GENIE: Higher-Order Denoising Diffusion Solvers">
+        <meta name="twitter:description" content="GENIE distills higher-order score terms into a small neural network and uses them for accelerated diffusion model sampling.">
+        <meta name="twitter:image" content="https://nv-tlabs.github.io/GENIE/assets/GENIE_resized.jpg">
     </head>
 
  <body>
