Adding twitter thread

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ pre {
         <meta name="twitter:creator" content="@timudk">
         <meta name="twitter:title" content="GENIE: Higher-Order Denoising Diffusion Solvers">
         <meta name="twitter:description" content="GENIE distills higher-order score terms into a small neural network and uses them for accelerated diffusion model sampling.">
-        <meta name="twitter:image" content="https://nv-tlabs.github.io/GENIE/assets/GENIE_resized.jpg">
+        <meta name="twitter:image" content="https://nv-tlabs.github.io/GENIE/assets/pipeline_resized.png">
     </head>
 
  <body>
@@ -381,6 +381,7 @@ pre {
         <h2>News</h2>
         <hr>
         <div class="row">
+            <div><span class="material-icons"> event </span> [Oct 2022] <a href=https://twitter.com/timudk/status/1580173105913135104>Twitter thread</a> explaining the work in detail.</div> 
             <div><span class="material-icons"> event </span> [Oct 2022] <a href="https://nv-tlabs.github.io/GENIE">Project page</a> released!</div>
             <div><span class="material-icons"> event </span> [Oct 2022] Paper released on <a href="https://arxiv.org/abs/2210.05475">arXiv</a>!</div>
         </div>
