--- a/index.html
+++ b/index.html
@@ -586,11 +586,11 @@ pre {
     <section id="bibtex">
         <h2>Citation</h2>
         <hr>
-        <pre><code>@article{dockhorn2022genie,
-        title={{GENIE: Higher-Order Denoising Diffusion Solvers}},
-        author={Dockhorn, Tim and Vahdat, Arash and Kreis, Karsten},
-        journal={Advances in Neural Information Processing Systems},
-        year={2022}
+        <pre><code>@inproceedings{dockhorn2022genie,
+    title={{{GENIE: Higher-Order Denoising Diffusion Solvers}}},
+    author={Dockhorn, Tim and Vahdat, Arash and Kreis, Karsten},
+    booktitle={Advances in Neural Information Processing Systems},
+    year={2022}
 }</code></pre>
     </section>
 </div>
