--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@ pre {
         <h2>News</h2>
         <hr>
         <div class="row">
+            <div><span class="material-icons"> event </span> [Mar 2023] <a href=https://github.com/nv-tlabs/GENIE>Code</a> and <a href=https://drive.google.com/drive/folders/18BBkidk0pSs1skYSKVH86pJNcsJHJhrU>models</a> have been released.</div> 
             <div><span class="material-icons"> event </span> [Oct 2022] <a href=https://twitter.com/timudk/status/1580173105913135104>Twitter thread</a> explaining the work in detail.</div> 
             <div><span class="material-icons"> event </span> [Oct 2022] <a href="https://nv-tlabs.github.io/GENIE">Project page</a> released!</div>
             <div><span class="material-icons"> event </span> [Oct 2022] Paper released on <a href="https://arxiv.org/abs/2210.05475">arXiv</a>!</div>
